# libstud-uuid

./: CMakeLists.txt
libstud/uuid/: uuid.hxx  uuid.ixx
